
syntax = "proto3";

package pb.helloworld;  //可以改名为你的 pb.XXXXX
option go_package = "pb.helloworld"; //指定go中使用的包  可以改名为你的 pb.XXXXX

import "gogo.proto"; //导入gogo protobuf

option (gogoproto.gostring_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.goproto_getters_all) = false;

service HelloWorldService {   //HellWorldService 可以改名为你的 XXXXXService
  //HelloRequest 改名为你的 XXXXXRequest
  //HelloResponse 改名为你的 XXXXXResponse
  rpc SayHello (HelloRequest) returns (HelloResponse) {}

}

message HelloRequest {  //起名技巧请带上Request后缀
  string name = 1;
  uint32 age = 2;

  message Request {  //请求参数，内嵌类型
                     string url = 1;
                     string title = 2;
                     repeated string ins = 3;
  }
  repeated Request requests = 3;
}

message Info {
  string email = 1;
  double money = 2;
}

// gogoproto.jsontag 当序列化为json时，如果是默认的值，同时返回这个字段

message HelloResponse { //起名技巧请带上Response后缀
  string message = 1  [(gogoproto.jsontag) = "message"];
  repeated Info Infos = 2; //自定义数组[]
  repeated string ans = 3; //string类型数组

  map<string, int32> projects = 4; //map，也就是hash，KV
  map<string, Info> myMap = 5; //自定义k=string , v = Info类型

}
